# hackathon-ai-editor-api

./: .gitignore  Dockerfile  bitbucket-pipelines.yml  pyproject.toml
terraform/: Makefile  ecr.tf  ecs.tf  iam.tf  loadbalancer.tf  main.tf  route53.tf  security.tf  ssm.tf  variables.tf  vpc.tf
terraform/vars/: acc.tfvars  prod.tfvars
vcpilotbackend/: app.py  models.py
vcpilotbackend/module/: chatgpt.py  factcheck.py
vcpilotbackend/routers/: completer.py  healthcheck.py
vcpilotbackend/script/: create_assistant.py  create_thread.py
